--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-table": "7.2.0",
     "react-toastify": "6.0.5",
     "redux": "4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-saga": "1.1.3",
     "typesafe-actions": "5.1.0",
     "typescript": "3.9.5",
@@ -93,7 +94,6 @@
     "lint-staged": "10.2.9",
     "node-sass": "4.14.1",
     "react-app-rewired": "2.1.6",
-    "redux-devtools-extension": "2.13.8",
     "scoped-css-loader": "1.0.0",
     "stylelint": "13.6.0",
     "stylelint-config-sass-guidelines": "7.0.0",
